# gfmodules-localization-metadata-register

./: .gitignore  .safety-policy.yml  Dockerfile  Makefile  README.md  app.conf.autopilot  app.conf.example  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml  release-package-venv.yaml  release-package.yaml
app/: application.py  config.py  container.py  cron.py  data.py  datetime_json.py  stats.py  telemetry.py
app/db/: db.py  decorator.py  models.py  session.py
app/db/repository/: __init__.py  reference_entry.py  resource_entry.py
app/metadata/: fhir.py  metadata_service.py  models.py
app/metadata/db/: db_adapter.py
app/metadata/mock/: mock_adapter.py
app/metadata/validators/: ImagingStudy.py  Patient.py  Validator.py  medication.py  medication_statement.py
app/routers/: default.py  health.py  metadata.py  resource.py
app/services/: mock_nvi_api_service.py  nvi_api_service.py  pseudonym_service.py
app/services/models/: create_referral_request_body.py  referral.py
docker/: Dockerfile
docs/fhir_examples/: README.md  bundle-001.json  imagingstudy-ctstudy123.json  observation-observation302.json  patient-123.json
seeds/: image_study.py  medication.py  medication_statement.py  mock-metadata.py  mock.py  organization.py  patient.py  person.py  utils.py
seeds/mock_metadata/: __main__.py  image_study.py  medication.py  medication_statement.py  organization.py  person.py  utils.py
sql/: 000-initial.sql  001-fhirdata.sql  002-remove-fhirdata.sql  003-remove-fhirdata.sql  004-on-conflict.sql
tests/: test_config.py  test_dataservice.py  test_nvi_api_service.py  test_resources.py  test_stats.py
tools/: autopilot.sh  generate_certs.sh  migrate_db.sh  seed.sh
